--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+{% extends "base.html" %}
+{% block content %}
+<h2>Liste des clients</h2>
+<table border="1">
+    <tr>
+        <th>ID</th>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>Téléphone</th>
+        <th>Abonnement</th>
+        <th>Date inscription</th>
+        <th>Action</th>
+    </tr>
+    {% for client in clients %}
+    <tr>
+        <td>{{ client[0] }}</td>
+        <td>{{ client[1] }}</td>
+        <td>{{ client[2] }}</td>
+        <td>{{ client[3] }}</td>
+        <td>{{ client[4] }}</td>
+        <td>{{ client[5] }}</td>
+        <td><a href="{{ url_for('delete_client', id=client[0]) }}">❌ Supprimer</a></td>
+    </tr>
+    {% endfor %}
+</table>
+{% endblock %}
